prod_snapshot_2015-09-24_1030/objects/DC_Operations_KPI__c.object
<CustomObject>
    <fields>
        <fullName>Average_Revenue_Split__c</fullName>
        <label>Average Revenue Split</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Average_of_Days_for_proof_approval__c</fullName>
        <label>Average # of Days for proof approval</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Hours_First_Reply__c</fullName>
        <label>Avg. Hours First Reply</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Closure__c</fullName>
        <label>Business Closure</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forgot_Password__c</fullName>
        <label>Forgot Password</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_to_find_Voucher__c</fullName>
        <label>How to find Voucher</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI_Run_Date__c</fullName>
        <label>KPI Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Deals_In_System_to_run__c</fullName>
        <label>Local Deals In System to run</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Deals_Produced_w_Run_Date_This_We__c</fullName>
        <label>Local Deals Produced  w/Run Date This We</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Deals_w_Run_Dates_next_30_days__c</fullName>
        <label>Local Deals w/Run Dates next 30 days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Tickets__c</fullName>
        <label>New Tickets</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Filler_Deals_Used__c</fullName>
        <formula>336-Local_Deals_Produced_w_Run_Date_This_We__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Filler Deals Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_deals_pulled__c</fullName>
        <label>Number of deals pulled</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_deals_that_need_revisions__c</fullName>
        <label>Number of deals that need revisions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_proofs_out_to_merchants__c</fullName>
        <label>Number of proofs out to merchants</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_of_Proofs_Approved__c</fullName>
        <formula>Number_of_proofs_out_to_merchants__c / ( Number_of_proofs_out_to_merchants__c +  Number_of_deals_pulled__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent of Proofs Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_deals_that_need_revisions__c</fullName>
        <formula>Number_of_deals_that_need_revisions__c /  Number_of_proofs_out_to_merchants__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent of deals that need revisions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Refund_Request__c</fullName>
        <label>Refund Request</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Opportunities_Approved__c</fullName>
        <label>SFDC Opportunities Approved</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Opportunities_Rejected__c</fullName>
        <label>SFDC Opportunities Rejected</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Opportunities_Submitted__c</fullName>
        <label>SFDC Opportunities Submitted</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Rating__c</fullName>
        <label>Satisfaction Rating</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shipping_Issues__c</fullName>
        <label>Shipping Issues</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Error__c</fullName>
        <label>Site Error</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solved_Tickets__c</fullName>
        <label>Solved Tickets</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Splits_Under_40__c</fullName>
        <label>Splits Under 40%</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ticket_Backlog__c</fullName>
        <label>Ticket Backlog</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Percent_Approved__c</fullName>
        <formula>SFDC_Opportunities_Approved__c / ( SFDC_Opportunities_Rejected__c +  SFDC_Opportunities_Approved__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Percent Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Unable_To_Purchase__c</fullName>
        <label>Unable To Purchase</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wild_Cards_Invoked__c</fullName>
        <label>Wild Cards Invoked</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DealChicken KPI&apos;s</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>KPI_Run_Date__c</columns>
        <columns>NAME</columns>
        <columns>Average_Revenue_Split__c</columns>
        <columns>Local_Deals_In_System_to_run__c</columns>
        <columns>Splits_Under_40__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DealChicken Operations KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DealChicken KPI&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>